--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 
     <link href="./styles/index.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world</h1>
+  </body>
 </html>
